--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,10 @@ services:
     build: .
     ports:
       - "8501:8501"
-    environment:
-      - GEMINI_API_KEY=AIzaSyBZdrhaqm3-9u-N1VtWL0I2IM_78Hfhx64
-      - STREAMLIT_SERVER_PORT=8501
-      - STREAMLIT_SERVER_HEADLESS=true
-    
+    env_file:
+      - .env
     volumes:
       - chroma_data:/app/chroma_data
-    
     restart: unless-stopped
 
 volumes:
